--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Build and Install folders
+_build/
+_install/
+
 # User-specific files
 *.suo
 *.user
