Fence Mechanics, Flushing and Finishing Initialize D3D12Window. Setup d3dx12.h As CMake Interface Library.

--- a/Part1/CMakeLists.txt
+++ b/Part1/CMakeLists.txt
@@ -11,4 +11,4 @@ target_include_directories( part1
 		${CMAKE_SOURCE_DIR}/lib/DX12/Include
 )
 
-target_link_libraries(part1 d3d12.lib dxgi.lib)
+target_link_libraries(part1 d3d12.lib dxgi.lib d3dx12.h)
