--- a/Part2/CMakeLists.txt
+++ b/Part2/CMakeLists.txt
@@ -1,15 +1,18 @@
 
 add_executable(part2 Source/Part2.cpp)
 
-# Include directories for target part1.
+# Include directories for target part2.
 # It will allow to include headers in C++ considering
 # the following directories as root, e.g. #include <Helpers.h>
 # since Helpers.h is inside Source folder.
+
+get_target_property(3DGEP_INCLUDES 3dgep PUBLIC_INCLUDE_DIRECTORIES)
+
 target_include_directories( part2
 	PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/Source
 		${CMAKE_SOURCE_DIR}/lib/DX12/Include
-		${CMAKE_SOURCE_DIR}/lib/3DGEP/Source
+		3DGEP_INCLUDES
 		${CMAKE_SOURCE_DIR}/lib/eigen/Eigen/src
 )
 
