Graphics Abstration Layer And Using It For Part 3

--- a/Part2/CMakeLists.txt
+++ b/Part2/CMakeLists.txt
@@ -1,22 +1,24 @@
 
 add_executable(part2 Source/Part2.cpp)
 
+#Note: here we are linking 3dgep only, but more libraries will be implicitly linked with it, such as Eigen and d3d12.
+target_link_libraries(part2 3dgep) 
+
 # Include directories for target part2.
 # It will allow to include headers in C++ considering
 # the following directories as root, e.g. #include <Helpers.h>
 # since Helpers.h is inside Source folder.
 
-get_target_property(3DGEP_INCLUDES 3dgep PUBLIC_INCLUDE_DIRECTORIES)
+get_target_property(3DGEP_INTERFACE_INCLUDES 3dgep INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(EIGEN_INTERFACE_INCLUDES eigen INTERFACE_INCLUDE_DIRECTORIES)
 
 target_include_directories( part2
 	PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/Source
-		${CMAKE_SOURCE_DIR}/lib/DX12/Include
-		3DGEP_INCLUDES
-		${CMAKE_SOURCE_DIR}/lib/eigen/Eigen/src
+		3DGEP_INTERFACE_INCLUDES
+		EIGEN_INTERFACE_INCLUDES
 )
 
-target_link_libraries(part2 3dgep)
 
 # Allowing reference of Part2 root path
 target_compile_definitions(part2 PRIVATE PART2_PROJ_ROOT_PATH=${CMAKE_CURRENT_SOURCE_DIR})
