--- a/lib/3DGEP/CMakeLists.txt
+++ b/lib/3DGEP/CMakeLists.txt
@@ -9,21 +9,24 @@ file(GLOB_RECURSE 3dgep_SRC
 
 add_library(3dgep ${3dgep_SRC})
 
-list(APPEND 3DGEP_PUBLIC_INCLUDES
-        ${CMAKE_CURRENT_LIST_DIR}/Source/Graphics/Public
-        ${CMAKE_CURRENT_LIST_DIR}/Source/Public
-)
-
-# By setting PUBLIC_INCLUDE_DIRECTORIES property, external targets can retrieve the public include directories that we listed in 3DGEP_PUBLIC_INCLUDES
-set_target_properties(3dgep PROPERTIES PUBLIC_INCLUDE_DIRECTORIES "${3DGEP_PUBLIC_INCLUDES}")
-
 target_include_directories(3dgep #Note: Only the Public folder will be seen by the targets that will use this library!!
     PUBLIC
-        ${3DGEP_PUBLIC_INCLUDES}
+        ${CMAKE_CURRENT_LIST_DIR}/Source/Graphics/Public
+        ${CMAKE_CURRENT_LIST_DIR}/Source/Public
     PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/Source
+        ${CMAKE_CURRENT_LIST_DIR}/Source/Graphics
         # TODO including platform specific code like D3D12 should be conditional when other Apis will be implemented 
         ${CMAKE_CURRENT_LIST_DIR}/Source/Graphics/D3D12
 )
 
+# Note: All the following libraries are implicitly linked PUBLIC, meaning that they will be part of the linking interface.
+# That means that all the projects that are linking 3dgep will also be able to use these libraries.
+# For a more proper engine application, we want parts like d3d12 libraries to be PRIVATE and used inside the graphics module only.
 target_link_libraries(3dgep d3d12.lib dxgi.lib d3dx12.h d3dcompiler.lib dxguid.lib eigen)
+
+
+target_compile_definitions(3dgep 
+	PRIVATE
+		GRAPHICS_SDK_D3D12=1 # This define simulates a switch between possible graphics APIs. When defined, code will assume we chose D3D12
+)
