--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/eigen"]
 	path = lib/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "lib/DirectXTex"]
+	path = lib/DirectXTex
+	url = https://github.com/microsoft/DirectXTex.git
