Ensure Graphics Resources Getting Removed On Application Quit

--- a/Part1/CMakeLists.txt
+++ b/Part1/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(part1 Source/Engine.cpp)
+add_executable(part1 "Source/Part1.cpp")
 
 # Include directories for target part1.
 # It will allow to include headers in C++ considering
